kubernetes/qbit-manage/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: qbit-manage
  labels:
    app: qbit-manage

spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbit-manage
  template:
    metadata:
      labels:
        app: qbit-manage
    spec:

      containers:
      - name: qbit-manage
        image: ghcr.io/stuffanthings/qbit_manage:v4.13.0@sha256:ea04167f627e506b3691304f4c639a52c05584cc9aea4af7ec87d4ed1299e7f5
        ports:
        - containerPort: 8181
          name: web-api
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: false
        - name: downloads
          mountPath: /downloads
          readOnly: false
        - name: qbittorrent-config
          mountPath: /torrents
          subPath: qBittorrent/data/BT_backup
          readOnly: true

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbit-manage-config
      - name: downloads
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
      - name: qbittorrent-config
        persistentVolumeClaim:
          claimName: qbittorrent-config
