kubernetes/qbit-manage/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: qbit-manage
  labels:
    app: qbit-manage

spec:
  ports:
  - port: 8181
    targetPort: 8181
    protocol: TCP
    name: web-api
  selector:
    app: qbit-manage
