kubernetes/qbit-manage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: qbit-manage
  labels:
    app: qbit-manage
  annotations:
    ak-type: simple
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: qBit Manage
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: qbittorrent.png

spec:
  tls:
  - hosts:
    - qbit-manage.k.oneill.net
    secretName: qbit-manage-tls
  rules:
  - host: qbit-manage.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbit-manage
            port:
              number: 8080
